20180814
========
- Add #38065 - Stop method is not implemented
- Add #29776 - MongoDB authentication pass-through
- Fixed #36045 - Set BSON Timestamp fields as "not searchable"
- Add #37654 - Connect to Cosmos DI via MongoDB Wrapper
- Add #38488 - Document CosmosDB support
- Add #34191 - Add compatible versions of VDP to MongoDB wrapper documentation
- Add #38064 - Clarify in the user manual that functions and the group by are not being delegated

20180712
========
Add #33193 - Update mongoDB driver to 3.8.0

20180601
========
- Fixed #37841 - Operator "IN" is delegated badly when _id field is an ObjectID

20180326
========
- Added #36668 - Add support to delegate the operator "IN" to the MongoDB wrapper

20180116
========
- Fixed #35275 - Bad translation of IS NULL and IS NOT NULL filters.

20171120
========
- #34474 - Bad introspection of empty complex fields inside embedded documents

20171013
========
- #34025 - Improve support for MongoDB's internal "BSON Timestamp" data type.

20170919
========
- Fixed #33753 - Correctly deal with BsonTimestamp when creating schema from introspection query
- Added #33752 - Improve logging of view schemas, both at construction and at query execution time

20170713
========
- Fixed #33192 - Simple fields always being identified as type "String" when using the introspection query

20170627
========
- Added #31888 - Review use of caches and schema

20170303
========
- Added #31468 - Improve mechanism for specifying the mongoDB schema in explicit form using the "Fields" input parameter 
- Added #29962 - Document the capability to connect via SSL

20161109
========
#29740 - Projections not being correctly delegated to MongoDB

20161108
========
#29727 - Add support to projection in mongodb
#29699 - Fix log query mongodb, adding projection and order by

20160726
========
- Check connection without using listdatabases()

20151207
========
- Fixed nullPointerException when there is a array or struct with a element with value null;